--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Ini",
   "description": "Ini file parser supporting Git config syntax.",
-  "version": "1.0",
+  "version": "1.0.0",
   "licenses": [{
     "type": "MIT",
     "url": "http://en.wikipedia.org/wiki/MIT_License"
@@ -11,12 +11,16 @@
     "web": "http://pollinimini.net/",
     "email": "drslump@pollinimini.net"
   }],
-  "repositories": [{
+  "repository": {
     "type": "git",
     "url": "http://github.com/drslump/ini-js"
-  }],
-  "dependencies": [
-  ],
+  },
+  "dependencies": {
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "jasmine-node": "*"
+  },
   "directories": {
     "lib": "lib"
   }
